Fix scroll issue on iOS (#1)

--- a/src/css/movetext.css
+++ b/src/css/movetext.css
@@ -115,3 +115,7 @@ div.kokopu-subVariation {
 	height: 0px;
 	overflow: hidden;
 }
+
+.kokopu-focusField {
+	position: absolute; /* see #1 */
+}
